# ogl_advance

./: .gitignore  CMakeLists.txt
include/: config.h  data.h  dirLight.h  light.h  mesh.h  model.h  pointLight.h  scene.h  shader.h  spotLight.h  utils.h
resources/shader/: General.fs  SingleColor.fs  depth.fs  light.fs
src/: config.cpp  main.cpp  mesh.cpp  model.cpp  scene.cpp  shader.cpp  utils.cpp
